Fixes issue where delete dialog appears behind iframe.

--- a/Emrald_Site/styles/help.css
+++ b/Emrald_Site/styles/help.css
@@ -33,7 +33,7 @@ body {
   opacity: 0.2;     
   width:100%;    
   height:100%;  
-  z-index:1000;  
+  z-index:0;  
   position:absolute; 
   top:0;  
   left:0;   
